quick fix to HTML

--- a/file.html
+++ b/file.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Open the console
-    <script src = "./Medium.js"></script>
+    <script src = "./Medium-VHard.js"></script>
 </body>
 </html>
